--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,13 @@
+body{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: rgb(234, 43, 110);
   padding: 1em;
   color: white;
   margin-bottom: 1em;
@@ -19,6 +23,16 @@ img{
 
 .galleryBox{
   height: 525px;
-  flex-wrap: inline;
 }
 
+
+.like-zone{
+  background-color: rgb(253, 171, 199);
+}
+
+button{
+  height: 60px;
+  width: 60px;
+  border-radius: 25%;
+  font-size: x-large;
+}
